fix view on phone and add better start screen

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="./main.js" defer></script>
 </head>
@@ -9,9 +10,8 @@
 <body>
     <div id="content">
         <div id="title">Jayden</div>
-        <div id="messages">
-        </div>
-        <div id="bottom">
+        <div id="main">
+            <div id="messages"></div>
             <div id="prompt-box">
                 <input id="prompt" placeholder="Chat met Jayden">
                 <button id="send"><svg width="32" height="32" viewBox="0 0 32 32" fill="none"
@@ -21,8 +21,10 @@
                             fill="currentColor"></path>
                     </svg></button>
             </div>
-            <p id="disclaimer">Het gebeurt niet vaak, maar Jayden kan fouten maken. Check belangrijke informatie op <a href="https://speld.nl">speld.nl</a>.</p>
         </div>
+        <p id="disclaimer">Het gebeurt niet vaak, maar Jayden kan fouten maken. Check belangrijke informatie op <a
+                href="https://speld.nl">speld.nl</a>.</p>
+    </div>
     </div>
 </body>
 
