--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1 interactive-widget=resizes-content" />
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="./main.js" defer></script>
 </head>
