--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1 interactive-widget=resizes-content" />
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="./main.js" defer></script>
+    <title>Jayden</title>
 </head>
 
 <body>
