--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1 interactive-widget=resizes-content" />
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="./main.js" defer></script>
-    <title>Jayden</title>
+    <title>JackGPT</title>
 </head>
 
 <body>
     <div id="content">
-        <div id="title">Jayden</div>
+        <div id="title">JackGPT</div>
         <div id="main">
             <div id="messages"></div>
             <div id="prompt-box">
-                <input id="prompt" placeholder="Chat met Jayden">
+                <input id="prompt" placeholder="Chat met JackGPT">
                 <button id="send"><svg width="32" height="32" viewBox="0 0 32 32" fill="none"
                         xmlns="http://www.w3.org/2000/svg" class="icon-2xl">
                         <path fill-rule="evenodd" clip-rule="evenodd"
@@ -23,9 +23,8 @@
                     </svg></button>
             </div>
         </div>
-        <p id="disclaimer">Het gebeurt niet vaak, maar Jayden kan fouten maken. Check belangrijke informatie op <a
+        <p id="disclaimer">Het gebeurt niet vaak, maar JackGPT kan fouten maken. Check belangrijke informatie op <a
                 href="https://speld.nl">speld.nl</a>.</p>
-    </div>
     </div>
 </body>
 
