--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <p id="disclaimer">Het gebeurt niet vaak, maar JackGPT kan fouten maken. Check belangrijke informatie op <a
-                href="https://speld.nl">speld.nl</a>.</p>
+                href="https://speld.nl">speld.nl</a>.<br>Gemaakt door Terts Diepraam &amp; Kiki Bosma voor De Speld</p>
     </div>
 </body>
 
